tests/baselines/reference/parserForOfStatement22.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement22.ts(2,6): error TS1106: The left-hand side of a 'for...of' statement may not be 'async'.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement22.ts (1 errors) ====
    var async;
    for (async of [1, 2]) {}
         ~~~~~
!!! error TS1106: The left-hand side of a 'for...of' statement may not be 'async'.
    